# gitdemo

./: pxcs.py
sign-language-learning-system/: CMakeLists.txt  README.md  login-ui-options.html  run-sign-language-system.ps1
sign-language-learning-system/database/: schema.sql
sign-language-learning-system/docs/: scoring-system-solution.md  system-design.md  ui-options.html
sign-language-learning-system/scripts/: create-shortcuts.ps1  hand_keypoint_detector.py  run-hidden.vbs  sync-to-linux.ps1  watch-sync-hidden.vbs  watch-sync-to-linux.ps1
sign-language-learning-system/src/: MainWindow.cpp  MainWindow.h
sign-language-learning-system/src/ai/: GestureScorer.cpp  GestureScorer.h
sign-language-learning-system/src/database/: DatabaseManager.cpp  DatabaseManager.h
sign-language-learning-system/src/models/: Gesture.cpp  Gesture.h  PracticeRecord.cpp  PracticeRecord.h
sign-language-learning-system/src/modules/: AssessmentManager.cpp  AssessmentManager.h  CameraCapture.cpp  CameraCapture.h  FeedbackGenerator.cpp  FeedbackGenerator.h  GestureLibrary.cpp  GestureLibrary.h  HandKeypointDetector.cpp  HandKeypointDetector.h  LearningStatistics.cpp  LearningStatistics.h  UserManager.cpp  UserManager.h
sign-language-learning-system/src/ui/: AppLogo.h  LoginSubmitGuard.h
sign-language-learning-system/tests/: test_app_logo.cpp  test_gesture_display.cpp  test_gesture_library_cache.cpp  test_login_submit_guard.cpp  test_scorer.cpp  test_user_manager.cpp
